force-app/main/default/objects/maps__TPHistory__c/maps__TPHistory__c.object-meta.xml
<CustomObject>
    <label>Alignment History Record</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alignment History Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>