force-app/main/default/objects/maps__TPHistory__c/fields/maps__Description__c.field-meta.xml
<CustomField>
    <fullName>maps__Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>