force-app/main/default/objects/maps__TPHistory__c/fields/maps__SnapshotId__c.field-meta.xml
<CustomField>
    <fullName>maps__SnapshotId__c</fullName>
    <label>Off-Platform Snapshot Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>