force-app/main/default/objects/maps__TPHistory__c/fields/maps__Type__c.field-meta.xml
<CustomField>
    <fullName>maps__Type__c</fullName>
    <label>Type of History Record</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Snapshot</fullName>
                <default>true</default>
                <label>Snapshot</label>
            </value>
            <value>
                <fullName>Optimization</fullName>
            </value>
            <value>
                <fullName>Territory Modification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>